2017-03-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed wrong declaration of Data Module menu items, resolves #1
	* Released version 3.0.4

2016-11-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed display of saved search in Data Import module, resolves #78721
	* Improved column configuration validator with additional warnings, resolves #78723
	* Released version 3.0.3, resolves #78724

2016-11-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed permissions for main backend module, resolves #77399
	* Added information about autoloading cache, resolves #77703
	* Improved configuration validation check before import, resolves #78713
	* Corrected column validator for "0" value, resolves #78485
	* Corrected validation rule for column configuration, resolves #78487

2016-08-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected wrong namespace, resolves #77295
	* Added API for retrieving existing uids, resolves #77305
	* Improved documentation about handling of namespaces in XML data, resolves #77241
	* Released version 3.0.2, resolves #77394

2016-07-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 3.0.1, resolves #77237

2016-07-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved check for failed connector service initialization, resolves #77151

2016-06-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added configuration validator, resolves #59250
	* Harmonized naming of "ctrl" properties, resolves #76607
	* Added logging, resolves #76618
	* Added composer support, resolves #76621
	* Released version 3.0.0, resolves #76583

2016-06-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added wizard for Scheduler tasks migration, resolves #76017

2016-06-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Expanded scope of clearCache property, resolves #76133

2016-05-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Refactored BE module, compatible with TYPO3 CMS 7, removed ExtJS, resolves #59441